temp app.js fix that breaks on build

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -32,22 +32,10 @@ h3:hover .last-updated {
 }
 
 h1 {
-  margin-top: 10v !important;
+  margin-top: 1em !important;
   display: inline-block;
   position: relative;
   margin: 0 auto;
-
-  &:before {
-    content: '';
-    width: 50%;
-    height: .05em;
-    background: @purple-2;
-    position: absolute;
-    margin:0 auto;
-    top: -.5em;
-    left: 0;
-    right: 0;
-  }
 }
 
 #intro {
